[gd_scene load_steps=2 format=3 uid="uid://mg5halcrfnsv"]

[ext_resource type="Script" uid="uid://ygaxiteom7w6" path="res://cookie_controller.gd" id="1_octis"]

[node name="CookieController" type="Node"]
script = ExtResource("1_octis")

[node name="CookieTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CookieTimer" to="." method="_on_cookie_timer_timeout"]
